--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
                     <input id="clearBtn" type="button" value="clear" title="clear screen" />
                 </div>
                 <textarea id="messageInput" placeHolder="enter to send"></textarea>
-                <input id="sendBtn" type="button" value="SEND">
+                <input id="sendBtn" class="sendBtn" value="SEND">
                 <div id="emojiground">
                 </div>
             </div>
